[gd_scene load_steps=52 format=2]

[ext_resource path="res://Levels/Level3/Roads.gd" type="Script" id=1]
[ext_resource path="res://Assets/Levels/Level3/Roads.png" type="Texture" id=2]
[ext_resource path="res://Assets/Levels/Level3/AssetsLvl3.png" type="Texture" id=3]
[ext_resource path="res://Post Processing tool/PostProcessing_tool.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Level3/Camera2D.gd" type="Script" id=8]
[ext_resource path="res://Levels/Level1/LayerChange.gd" type="Script" id=9]
[ext_resource path="res://Levels/Level2/PlayerGroup.gd" type="Script" id=10]
[ext_resource path="res://Enemies/Boss/Boss.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Levels/Level3/carBreak.png" type="Texture" id=12]
[ext_resource path="res://Levels/Level3/Cutscene.gd" type="Script" id=13]
[ext_resource path="res://Assets/Levels/Level3/boss-scene.png" type="Texture" id=14]
[ext_resource path="res://Levels/Objects.cs" type="Script" id=15]
[ext_resource path="res://Assets/Levels/Level3/background.mp3" type="AudioStream" id=16]
[ext_resource path="res://Assets/Levels/Level3/zvuk-vyibivaniya-dveri-24274.mp3" type="AudioStream" id=17]
[ext_resource path="res://Levels/Level3/Ð¡utsceneS.gd" type="Script" id=18]
[ext_resource path="res://Levels/Level2/music.gd" type="Script" id=19]
[ext_resource path="res://Assets/Levels/Level3/udar-po-dveri-37128.mp3" type="AudioStream" id=20]
[ext_resource path="res://Levels/Level3/TimeOff.gd" type="Script" id=21]
[ext_resource path="res://Assets/Levels/zvuk-avtomobilnoy-avarii-na-doroge-34121.mp3" type="AudioStream" id=22]
[ext_resource path="res://Assets/Levels/Level3/let-the-games-begin-21858.mp3" type="AudioStream" id=23]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3968, 624, 1984, 624 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1984, 624, 1984, 624 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 624, 1984, 624 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3968, 0, 1984, 624 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1984, 0, 1984, 624 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 1984, 624 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "1",
"speed": 1.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "2",
"speed": 1.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "3",
"speed": 1.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": false,
"name": "4",
"speed": 1.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "5",
"speed": 1.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": false,
"name": "6",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 994.75, 95.5 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 1970, 720 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 720, 1970, 720 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "def2",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1970, 720, 1970, 720 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 900, 575 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 900, 0, 900, 575 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 1800, 0, 900, 575 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 2700, 0, 900, 575 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 575, 900, 575 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 900, 575, 900, 575 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 1800, 575, 900, 575 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 2700, 575, 900, 575 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 1150, 900, 575 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 900, 1150, 900, 575 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 1800, 1150, 900, 575 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 2700, 1150, 900, 575 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 1725, 900, 575 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Level3" type="Node"]
script = ExtResource( 15 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128
script = ExtResource( 9 )

[node name="UI" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="PostProcessing_tool" parent="CanvasLayer" instance=ExtResource( 4 )]
anchor_left = -0.675
margin_left = 862.0
margin_right = 862.0
__meta__ = {
"_edit_use_anchors_": true
}
adjustment_show = true
adjustment_brightnes = 0.75
color_splash_strength = -1.939
vignette_multiplier = 0.055
vignette_scale = 0.747

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="LevelBackground" type="StaticBody2D" parent="."]
position = Vector2( 235, 199 )

[node name="Roads" type="Node2D" parent="LevelBackground"]
script = ExtResource( 1 )

[node name="Road1" type="AnimatedSprite" parent="LevelBackground/Roads"]
position = Vector2( 2400, 217 )
frames = SubResource( 7 )
animation = "1"

[node name="Sprite" type="Sprite" parent="LevelBackground/Roads/Road1"]
position = Vector2( -6, -351 )
scale = Vector2( 1, 1.16364 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1970, 0, 1970, 110 )

[node name="Road2" type="AnimatedSprite" parent="LevelBackground/Roads"]
position = Vector2( 440, 217 )
frames = SubResource( 7 )
animation = "1"

[node name="Sprite" type="Sprite" parent="LevelBackground/Roads/Road2"]
position = Vector2( -6, -350.5 )
scale = Vector2( 1, 1.15455 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1970, 0, 1970, 110 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LevelBackground"]
polygon = PoolVector2Array( 1610, 955, 1191, 142, -510, 159, -584, 288, -573, -197, 1723, -201 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="LevelBackground"]
polygon = PoolVector2Array( -335, 521, -264, 477, -257, 388, -319, 356, -255, 284, -199, 301, -149, 270, -153, 225, -163, 216, -137, 193, -107, 216, -71, 204, -37, 182, -44, 154, -510, 158, -520, 519 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="LevelBackground"]
polygon = PoolVector2Array( 1041, 470, 1176, 336, 1264, 382, 1264, 436, 1156, 543, 1031, 550 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="LevelBackground"]
polygon = PoolVector2Array( 1101, 143, 1100, 175, 1073, 207, 944, 202, 955, 140 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="LevelBackground"]
polygon = PoolVector2Array( 351, 232, 233, 240, 190, 229, 51, 211, 56, 154, 339, 149 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBackground"]
position = Vector2( 409.25, 610.5 )
shape = SubResource( 30 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="LevelBackground"]
position = Vector2( 403.5, 162 )
frames = SubResource( 9 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="LevelBackground"]
position = Vector2( 403.5, 162 )
frames = SubResource( 12 )

[node name="Cutscene" type="AnimatedSprite" parent="LevelBackground"]
position = Vector2( 1033, 142 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 29 )
script = ExtResource( 13 )

[node name="SceneTimer" type="Timer" parent="LevelBackground"]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Objects" type="Node2D" parent="."]

[node name="Player" type="Node2D" parent="Objects"]
script = ExtResource( 10 )

[node name="Player" type="CanvasLayer" parent="Objects/Player"]
layer = 10
follow_viewport_enable = true

[node name="Player" parent="Objects/Player/Player" instance=ExtResource( 7 )]
position = Vector2( 728, 522 )
collision_layer = 2
cutsceneStart = false

[node name="Camera2D" type="Camera2D" parent="Objects/Player/Player/Player"]
position = Vector2( 129, -88 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1623
limit_bottom = 720
script = ExtResource( 8 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Objects/Player/Player/Player"]
frames = SubResource( 13 )

[node name="Boss" type="Node2D" parent="Objects"]

[node name="Boss" type="CanvasLayer" parent="Objects/Boss"]
follow_viewport_enable = true

[node name="Boss" parent="Objects/Boss/Boss" instance=ExtResource( 11 )]
position = Vector2( 1046, 429 )
cutscene = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -39.661
autoplay = true
script = ExtResource( 19 )

[node name="Ð¡utscene" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -10.575
script = ExtResource( 18 )

[node name="Ð¡utscene2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -22.033
script = ExtResource( 18 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -24.678
autoplay = true
script = ExtResource( 19 )

[node name="TimeOff" type="Timer" parent="."]
wait_time = 2.468
one_shot = true
script = ExtResource( 21 )

[node name="TimerStart" type="Timer" parent="."]
wait_time = 8.5

[node name="Avaria" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -14.983
script = ExtResource( 19 )

[connection signal="animation_finished" from="LevelBackground/Cutscene" to="LevelBackground/Cutscene" method="_on_Cutscene_animation_finished"]
[connection signal="sound" from="LevelBackground/Cutscene" to="Ð¡utscene" method="_on_Cutscene_sound"]
[connection signal="sound1" from="LevelBackground/Cutscene" to="Ð¡utscene2" method="_on_Cutscene_sound"]
[connection signal="off" from="Objects/Player/Player/Player/Camera2D" to="TimeOff" method="_on_Camera2D_off"]
[connection signal="Dead" from="Objects/Boss/Boss/Boss" to="Objects/Player/Player/Player/Camera2D" method="_on_Boss_Dead"]
[connection signal="timeout" from="TimeOff" to="TimeOff" method="_on_TimeOff_timeout"]
[connection signal="timeout" from="TimerStart" to="TimeOff" method="_on_TimerStart_timeout"]
